; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_c67x00_ll_husb_set_current_td.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_c67x00_ll_husb_set_current_td.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c67x00_sie = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @c67x00_ll_husb_set_current_td(%struct.c67x00_sie* %0, i32 %1) #0 {
  %3 = alloca %struct.c67x00_sie*, align 8
  %4 = alloca i32, align 4
  store %struct.c67x00_sie* %0, %struct.c67x00_sie** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.c67x00_sie*, %struct.c67x00_sie** %3, align 8
  %6 = getelementptr inbounds %struct.c67x00_sie, %struct.c67x00_sie* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.c67x00_sie*, %struct.c67x00_sie** %3, align 8
  %9 = getelementptr inbounds %struct.c67x00_sie, %struct.c67x00_sie* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @HUSB_SIE_pCurrentTDPtr(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @hpi_write_word(i32 %7, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @hpi_write_word(i32, i32, i32) #1

declare dso_local i32 @HUSB_SIE_pCurrentTDPtr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
